Improve pathing
